# flask-ml-dashboard

./: README.md
backend/: Dockerfile  app_factory.py  config.py  logger.ini  main.py  pyproject.toml  requirements.txt
backend/logger/: logging.py
backend/routes/: saudacao.py  soma.py
backend/schemas/: somas.py
docker/: compose.yaml
exerc_async/: main.py
exerc_pandas/: main.py
exerc_security/: main.py
