[tool.poetry]
name = "flask-ml-dashboard"
version = "0.1.0"
description = "Este repositório contém a implementação de uma API em Flask, soluções para análise de dados e aplicações assíncronas, seguindo boas práticas de desenvolvimento, segurança e deploy em cloud."
authors = ["Vincenzo140 <vincenzo.amendola141@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_ml_dashboard"}]  
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = ">=3.1.0,<4.0.0"
starlette = "^0.45.3"
pydantic = "^2.10.6"
flask-restx = "^1.3.0"
rich = "^13.9.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
